update jsdelivr cdn

--- a/index.html
+++ b/index.html
@@ -49,47 +49,47 @@
     <div class="content">
         <div class="list">
             <ul>
-                <li style="background-image: url('image/bilibili.jpg');">
+                <li style="background-image: url('https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/image/bilibili.jpg');">
                     <a href="https://search.bilibili.com/all?keyword=Warma" target="_blank"></a>
                 </li>
-                <li style="background-image: url('image/yiyu.jpg');">
+                <li style="background-image: url('https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/image/yiyu.jpg');">
                     <a href="http://rainwarma.lofter.com/" target="_blank"></a>
                 </li>
-                <li style="background-image: url('image/warma.jpg');">
+                <li style="background-image: url('https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/image/warma.jpg');">
                     <a href="https://weibo.com/p/1005051782488734" target="_blank"></a>
                 </li>
-                <li style="background-image: url('image/dianzheli.jpg');">
+                <li style="background-image: url('https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/image/dianzheli.jpg');">
                     <a href="https://space.bilibili.com/53456" target="_blank"></a>
                 </li>
-                <li style="background-image: url('image/zhuzhan.jpg');">
+                <li style="background-image: url('https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/image/zhuzhan.jpg');">
                     <a href="https://space.bilibili.com/53456" target="_blank"></a>
                 </li>
-                <li style="background-image: url('image/mianfeishipin.jpg');">
+                <li style="background-image: url('https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/image/mianfeishipin.jpg');">
                     <a href="https://space.bilibili.com/53456" target="_blank"></a>
                 </li>
-                <li style="background-image: url('image/bg.jpg');">
+                <li style="background-image: url('https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/image/bg.jpg');">
                     <ul>
-                        <li style="background-image: url('image/menu_1.png');">
+                        <li style="background-image: url('https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/image/menu_1.png');">
                             <a href="https://space.bilibili.com/53456/video?tid=1&keyword=&order=pubdate"
                                target="_blank"></a>
                         </li>
-                        <li style="background-image: url('image/menu_2.png');">
+                        <li style="background-image: url('https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/image/menu_2.png');">
                             <a href="https://space.bilibili.com/53456/video?tid=1&keyword=&order=pubdate"
                                target="_blank"></a>
                         </li>
-                        <li style="background-image: url('image/menu_3.png');">
+                        <li style="background-image: url('https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/image/menu_3.png');">
                             <a href="https://space.bilibili.com/53456/video?tid=4&keyword=&order=pubdate"
                                target="_blank"></a>
                         </li>
-                        <li style="background-image: url('image/menu_4.png');">
+                        <li style="background-image: url('https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/image/menu_4.png');">
                             <a href="https://space.bilibili.com/53456/video?tid=3&keyword=&order=pubdate"
                                target="_blank"></a>
                         </li>
-                        <li style="background-image: url('image/menu_5.png');">
+                        <li style="background-image: url('https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/image/menu_5.png');">
                             <a href="https://space.bilibili.com/53456/video?tid=160&keyword=&order=pubdate"
                                target="_blank"></a>
                         </li>
-                        <li style="background-image: url('image/menu_6.png');">
+                        <li style="background-image: url('https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/image/menu_6.png');">
                             <a href="https://space.bilibili.com/53456/video?tid=160&keyword=&order=pubdate"
                                target="_blank"></a>
                         </li>
@@ -100,15 +100,16 @@
     </div>
     <div class="float float-left">
         <a href="https://www.bilibili.com/video/av18802468" target="_blank">
-            <img src="image/float_left.jpg">
+            <img src="https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/image/float_left.jpg">
         </a>
     </div>
     <div class="float float-right">
     </div>
     <div class="spider">
-        <img id="zhizhu" src="image/zhizhu.png">
+        <img id="zhizhu" src="https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/image/zhizhu.png">
     </div>
-    <audio id="audio" class="hidden" src="./audio/我家里有蜘蛛！！！.wav" preload="auto" loop></audio>
+    <audio id="audio" class="hidden" src="https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/我家里有蜘蛛！！！.wav"
+           preload="auto" loop></audio>
 </div>
 </body>
 </html>
