update jsdelivr cdn

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Warma的主页</title>
     <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="stylesheet" href="css/style.css?version=3">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/css/style.css?version=3">
     <script>
         let _hmt;
         _hmt = _hmt || [];
