update jsdelivr cdn

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="spider">
         <img id="zhizhu" src="https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/image/zhizhu.png">
     </div>
-    <audio id="audio" class="hidden" src="https://cdn.jsdelivr.net/gh/mouyase/warma.moe@master/我家里有蜘蛛！！！.wav"
+    <audio id="audio" class="hidden" src="audio/我家里有蜘蛛！！！.mp3"
            preload="auto" loop></audio>
 </div>
 </body>
